<resources>
    <string name="app_name">SocialApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="facebook_app_id">1505883319425294</string>
    <string name="signUpText"> <u>New here? Sign Up</u> </string>
    <string name="firstNameLabel">First Name:</string>
    <string name="lastNameLabel">Last Name:</string>
    <string name="genderLabel">Gender:</string>
    <string name="profilePicLabel">Profile Picture:</string>

</resources>
