<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rigot.socialapp.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:id="@+id/editTextLoginEmail" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editTextLoginEmail"
        android:layout_alignStart="@+id/editTextLoginEmail"
        android:layout_marginTop="40dp"
        android:id="@+id/textViewLoginEmail" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextLoginPwd"
        android:layout_alignLeft="@+id/editTextLoginPwd"
        android:layout_alignStart="@+id/editTextLoginPwd"
        android:layout_marginBottom="50dp"
        android:id="@+id/textViewLoginPwd" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextLoginPwd"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/editTextLoginEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogin"
        android:layout_below="@+id/editTextLoginPwd"
        android:layout_centerHorizontal="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/google_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <Button
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLoginSignUp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in"
        android:layout_height="40dp"
        android:layout_width="180dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/buttonLogin"
        android:layout_alignLeft="@+id/facebook_login_button"
        android:layout_alignStart="@+id/facebook_login_button"
        android:layout_alignRight="@+id/facebook_login_button"
        android:layout_alignEnd="@+id/facebook_login_button" />

</RelativeLayout>
